--- a/views/danny.html.erb
+++ b/views/danny.html.erb
@@ -2,8 +2,8 @@
 <body>
 	<div>
 		<ul>
-			<% ['cats','dogs','horses'].each do |animals| %>
-			<li>I like <%= fruit %></li>
+			<% ['cats','dogs','horses'].each do |animal| %>
+			<li>I like <%= animal %></li>
 			<% end %>
 		</ul>
 	</div>
