--- a/views/layouts/application.html.erb
+++ b/views/layouts/application.html.erb
@@ -1,10 +1,18 @@
+<%
+  def link_to(name,url)
+    return "<a href='#{url}'>#{name}</a>"        
+  end
+%>
 <html>
   <body>
-    <h1>You're using a layout</h1>
+    <h1>This is a layout</h1>
     <p>
-      <h3> I'm a header</h3>
-      <p>Put things in the header</p>
-      <a href='me.html'>Me</a>
+      <h3> I'm a header and I'm wacko</h3>
+      <p>Add things to me</p>
+      <%= link_to('This Links to Me cause', 'me.html') %>
+      <a href='http://google.com'>Google</a>
+      <a href='me.html'>Links to Me</a>
+      <a href='danny.html'>Links to Danny</a>
 
     </p>
     <hr />
@@ -13,8 +21,9 @@
     </div>
     <hr />
     <div>
-      <h3> I'm a footer</h3>
-      <p>Put things in the footer</p>
+      <h3> I'm a footer and I'm bonkers</h3>
+      <p>stick stuff down here</p>
+      <a href='index.html'>Links to the Index</a>
     </div>
   </body>
 </html>
